Clean up browser console and replace charts (#2)
* Migrate to Chart.js to get rid of parentNode error

* Move to HSL color model to improve shades

* Uninstall frappe-charts

* Uninstall chart lib and add dummy graphics

* chartist.js is too dummy and frappe is the best

* Return skeleton while page is loading

* Update margin for charts

* Add circles for line chart to improve a11y

* Update datasets for Health and Stocks

* Merge header template into page decorator

* Create a11y sets for Promotions and Subscriptions

* Update router to latest version

* Update vite to latest version

* Imrove skeleton layout

* Make tabs more a11y

* Use const as enum keys

* Increase dots size on the line chart

* Resolve export issue with category

* Create legend for one chart

* Create hook for legends to reuse logic

* Add pulse transition on router change

* Minor aria improvements

--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -3,13 +3,17 @@
 }
 
 .loader {
-  background-color: var(--c-black);
-  height: 1.6rem;
-  margin: var(--s-medium) 0;
+  text-align: center;
+  height: var(--s-ellipse);
+  margin: var(--s-system) 0 var(--s-medium);
 }
 
-.loader-box {
-  height: 12rem;
+.skeleton {
+  width: var(--s-ellipse);
+}
+
+.spinner {
+  height: 1.8rem;
 }
 
 @keyframes pulse {
