--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   --c-grey: #a1a1a6;
   --c-heat: #fa124f;
   --c-purple: #b25fea;
-  --s-ellipse: 5.4rem;
+  --s-ellipse: 4.9rem;
   --s-medium: 2rem;
   --s-dock: 2.3rem;
   --s-system: 1.4rem;
@@ -41,7 +41,7 @@ body {
   background-color: var(--c-primary);
   color: var(--c-black);
   min-height: 100vh;
-  padding-bottom: 9.2rem;
+  padding-bottom: 10.2rem;
 }
 
 a {
@@ -63,10 +63,19 @@ button {
   font-family: inherit;
 }
 
+a,
+button {
+  transition: filter 0.25s, transform 0.4s var(--a-press),
+    background-color 0.5s cubic-bezier(0.28, 0.11, 0.32, 1),
+    outline-offset 0.2s linear;
+}
+
+a:active,
+button:active {
+  transform: scale(0.95);
+}
+
 .app {
-  display: grid;
-  grid-template-columns: 1fr;
-  justify-items: center;
   max-width: 142rem;
 }
 
@@ -90,7 +99,7 @@ button {
 
 .info {
   line-height: 2.4rem;
-  margin: var(--s-system) 0 2rem;
+  margin: var(--s-system) 0 var(--s-medium);
 }
 
 .subtitle {
@@ -172,9 +181,75 @@ button {
   color: var(--c-white);
 }
 
+.btn {
+  display: block;
+  padding: 1.8rem var(--s-medium) 1.6rem;
+  background-color: var(--c-active);
+  color: var(--c-black);
+  font-weight: bold;
+  font-size: 1.6rem;
+  border-radius: var(--s-dock);
+  text-align: center;
+}
+
+.btn:hover {
+  filter: var(--p-shadow);
+  background-color: var(--c-black);
+  color: var(--c-white);
+}
+
+.arrow {
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  display: inline-block;
+  padding: 3px;
+  border-color: var(--c-black);
+}
+
+.arrow-right {
+  transform: rotate(-45deg);
+}
+
+.backward {
+  background-color: var(--c-active);
+  height: 3.4rem;
+  width: 3.4rem;
+  border-radius: 50%;
+}
+
+.backward:hover {
+  background-color: var(--c-dark);
+}
+
+.products {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1.6rem;
+}
+
+.panel {
+  padding: 0.1rem var(--s-medium);
+}
+
+.depth {
+  background-color: var(--c-depth);
+  backdrop-filter: var(--p-blur);
+  color: #000;
+}
+
+.sticky {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
 @media screen and (max-width: 768px) {
   .view {
     padding: var(--s-system);
+  }
+
+  .panel {
+    padding: 0.1rem var(--s-system);
   }
 
   .title {
