--- a/src/pages/Products/DialogContent/DialogContent.css
+++ b/src/pages/Products/DialogContent/DialogContent.css
@@ -2,12 +2,6 @@
   --c-backdrop: rgba(0, 0, 0, 0.4);
 }
 
-.depth {
-  background-color: var(--c-depth);
-  backdrop-filter: var(--p-blur);
-  color: #000;
-}
-
 .backdrop {
   background-color: var(--c-backdrop);
   position: fixed;
@@ -16,6 +10,7 @@
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 3;
 }
 
 .dialog {
@@ -24,6 +19,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   min-width: 54vw;
+  z-index: 4;
 }
 
 .alert {
