--- a/src/pages/Products/Products.css
+++ b/src/pages/Products/Products.css
@@ -1,9 +1,3 @@
-.products {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 1.6rem;
-}
-
 .widget-title {
   font-size: 1.7rem;
   margin-bottom: 0.2rem;
@@ -11,11 +5,37 @@
 
 .widget-main {
   font-size: 3.2rem;
-  margin: 1rem 0 1.6rem;
+  margin-bottom: 1.6rem;
 }
 
 .widget-group {
   background-color: var(--c-active);
   padding: 0.7rem 0.7rem 0.3rem;
   border-radius: 50%;
+}
+
+.widget-chart {
+  transition: filter 0.4s;
+}
+
+.widget-chart:hover {
+  filter: var(--p-shadow);
+}
+
+.widget-line circle:hover,
+.widget-line circle:focus,
+.widget-bar path:hover,
+.widget-bar path:focus {
+  filter: contrast(90%) brightness(125%) saturate(110%);
+}
+
+small {
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .widget-chart {
+    grid-column: span 2;
+  }
 }
