--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -9,13 +9,13 @@
 }
 
 .tour-list {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   align-items: flex-start;
-  min-width: 16rem;
+  min-width: 18rem;
 }
 
 .tour-list-item {
-  padding: 0.9rem 1.4rem;
+  padding: 0.8rem 0.8rem 0.8rem 1.4rem;
   font-size: inherit;
   background-color: transparent;
 }
