--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -1,16 +1,54 @@
+:root {
+  --c-ghost: #eefbf3;
+  --c-show: #fff4f4;
+  --c-lavender: #fff8ee;
+  --c-alice: #f0fbff;
+  --c-liver: #fff7f7;
+}
+
 .expert {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
 }
 
 .sidebar {
-  box-shadow: inset 0px 1px 3px var(--c-depth);
+  margin-top: var(--s-system);
 }
 
 .production {
   grid-column: span 4;
 }
 
+.toolbar {
+  grid-gap: var(--s-medium);
+}
+
 .text-center {
   text-align: center;
+}
+
+.brainstorm {
+  background-color: var(--c-ghost);
+}
+
+.interview {
+  background-color: var(--c-show);
+}
+
+.document {
+  background-color: var(--c-lavender);
+}
+
+.survey {
+  background-color: var(--c-alice);
+}
+
+.prototyping {
+  background-color: var(--c-liver);
+}
+
+@media screen and (max-width: 768px) {
+  .expert {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
