--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -17,6 +17,7 @@
 
 .production {
   grid-column: span 4;
+  align-items: baseline;
 }
 
 .toolbar {
@@ -50,5 +51,9 @@
 @media screen and (max-width: 768px) {
   .expert {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .production {
+    grid-column: span 1;
   }
 }
