--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,7 @@ button:active {
 
 .app {
   max-width: 142rem;
+  transition: transform 0.5s cubic-bezier(0.32, 0.72, 0, 1);
 }
 
 .content-full {
