--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -56,6 +56,28 @@
   border-radius: var(--s-medium) 0 0 var(--s-medium);
 }
 
+.bottom-sheet {
+  position: fixed;
+  top: var(--s-medium);
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 5;
+  border-radius: 1rem 1rem 0 0;
+}
+
+.bottom-main {
+  transform: scale(0.94);
+}
+
+.hide-scroll {
+  overflow: hidden;
+}
+
+.hide-scroll .dock {
+  bottom: -8rem;
+}
+
 @media screen and (max-width: 768px) {
   .expert {
     grid-template-columns: repeat(1, 1fr);
