--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,6 @@
   --s-dock: 2.3rem;
   --s-system: 1.4rem;
   --s-unit: 0.8rem;
-  --a-press: cubic-bezier(0.175, 0.885, 0.32, 1.275);
   --p-blur: blur(20px) saturate(180%);
   --p-shadow: drop-shadow(0px 0px 30px var(--c-dark));
 }
@@ -65,18 +64,21 @@ button {
 
 a,
 button {
-  transition: filter 0.25s, transform 0.4s var(--a-press),
+  will-change: transform;
+  transition: filter 0.25s,
+    transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275),
     background-color 0.5s cubic-bezier(0.28, 0.11, 0.32, 1),
     outline-offset 0.2s linear;
 }
 
 a:active,
 button:active {
-  transform: scale(0.95);
+  transform: scale(0.94);
 }
 
 .app {
   max-width: 142rem;
+  transition: transform 0.5s cubic-bezier(0.32, 0.72, 0, 1);
 }
 
 .content-full {
@@ -92,7 +94,7 @@ button:active {
 }
 
 .title {
-  font-size: 4.8rem;
+  font-size: 4.6rem;
   margin: 2.8rem 0 0;
   letter-spacing: 0.35px;
 }
@@ -103,7 +105,7 @@ button:active {
 }
 
 .subtitle {
-  font-size: 3.4rem;
+  font-size: 3.2rem;
   margin: 1.6rem 0 1rem;
 }
 
@@ -135,7 +137,7 @@ button:active {
   position: fixed;
   bottom: 1.2rem;
   left: 50%;
-  animation: toast-enter cubic-bezier(0.155, 1.105, 0.295, 1.12) 0.4s both;
+  transform: translateX(-50%);
 }
 
 .dock {
@@ -181,10 +183,15 @@ button:active {
   color: var(--c-white);
 }
 
+.token,
+.btn,
+.backward {
+  background-color: var(--c-active);
+}
+
 .btn {
   display: block;
   padding: 1.8rem var(--s-medium) 1.6rem;
-  background-color: var(--c-active);
   color: var(--c-black);
   font-weight: bold;
   font-size: 1.6rem;
@@ -211,7 +218,6 @@ button:active {
 }
 
 .backward {
-  background-color: var(--c-active);
   height: 3.4rem;
   width: 3.4rem;
   border-radius: 50%;
@@ -262,17 +268,5 @@ button:active {
 
   .subtitle {
     font-size: 2rem;
-  }
-}
-
-@keyframes toast-enter {
-  0% {
-    opacity: 0.01;
-    transform: translateY(100%) translateX(-50%);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0%) translateX(-50%);
   }
 }
