--- a/src/pages/Products/Products.css
+++ b/src/pages/Products/Products.css
@@ -1,3 +1,8 @@
+:root {
+  --c-stock: #00e3961a;
+  --c-subscription: #b25fea1a;
+}
+
 .widget-title {
   font-size: 1.7rem;
   margin-bottom: 0.2rem;
@@ -21,6 +26,10 @@
   filter: var(--p-shadow);
 }
 
+.widget-line circle {
+  stroke-width: 0.2rem;
+}
+
 .widget-line circle:hover,
 .widget-line circle:focus,
 .widget-bar path:hover,
@@ -33,8 +42,28 @@ small {
   text-align: center;
 }
 
+#chart-stocks {
+  color: var(--c-stock);
+}
+
+#chart-stocks circle {
+  stroke: var(--c-stock);
+}
+
+#chart-subscriptions {
+  color: var(--c-subscription);
+}
+
+#chart-subscriptions circle {
+  stroke: var(--c-subscription);
+}
+
 @media screen and (max-width: 768px) {
   .widget-chart {
     grid-column: span 2;
+  }
+
+  .widget-line circle {
+    stroke-width: var(--s-medium);
   }
 }
