--- a/src/index.css
+++ b/src/index.css
@@ -125,7 +125,7 @@ button:focus-visible {
 
 .subtitle {
   font-size: 3.2rem;
-  margin: 1.6rem 0 1rem;
+  margin: 1rem 0 var(--s-unit);
 }
 
 .items-center {
