--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -9,13 +9,13 @@
 }
 
 .tour-list {
-  font-size: 1.4rem;
+  font-size: var(--s-system);
   align-items: flex-start;
   min-width: 18rem;
 }
 
 .tour-list-item {
-  padding: 0.8rem 0.8rem 0.8rem 1.4rem;
+  padding: var(--s-unit) var(--s-unit) var(--s-unit) var(--s-system);
   font-size: inherit;
   background-color: transparent;
 }
@@ -33,7 +33,7 @@
 }
 
 .chip {
-  padding: 0.4rem 0.8rem;
+  padding: 0.4rem var(--s-unit);
   border-radius: 1rem;
 }
 
