--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,7 @@ a:focus-visible {
 
 a:focus-visible,
 button:focus-visible {
-  border-radius: var(--s-system);
+  border-radius: 4px;
 }
 
 .app {
@@ -125,7 +125,7 @@ button:focus-visible {
 
 .subtitle {
   font-size: 3.2rem;
-  margin: 1.6rem 0 1rem;
+  margin: 1.2rem 0 1rem;
 }
 
 .items-center {
