--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -59,12 +59,13 @@
 .bottom-sheet {
   position: fixed;
   top: 0;
-  left: 0;
+  left: 50%;
+  min-width: 90vw;
   margin: var(--s-safe) 1rem 0;
   height: 100%;
   z-index: 5;
   border-radius: 1rem 1rem 0 0;
-  animation: toast-enter cubic-bezier(0.32, 0.72, 0, 1) 0.5s both;
+  animation: toast-enter cubic-bezier(0.4, 0, 0.2, 1) 0.25s both;
 }
 
 .bottom-main {
@@ -92,10 +93,10 @@
 
 @keyframes toast-enter {
   0% {
-    transform: translateY(100%);
+    transform: translateY(100%) translateX(-50%);
   }
 
   100% {
-    transform: translateY(0%);
+    transform: translateY(0%) translateX(-50%);
   }
 }
