--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -61,7 +61,6 @@
   top: 0;
   left: 50%;
   min-width: 90vw;
-  margin: var(--s-safe) 1rem 0;
   height: 100%;
   z-index: 5;
   border-radius: 1rem 1rem 0 0;
@@ -97,6 +96,6 @@
   }
 
   100% {
-    transform: translateY(0%) translateX(-50%);
+    transform: translateY(var(--s-safe)) translateX(-50%);
   }
 }
