--- a/src/pages/Privacy/Privacy.css
+++ b/src/pages/Privacy/Privacy.css
@@ -1,16 +1,12 @@
-:root {
-  --s-gap: 4.8rem;
-}
-
 .privacy {
   display: grid;
   grid-template-columns: 4fr 1fr;
   grid-gap: 1.8rem;
-  padding-top: var(--s-gap);
+  padding-top: var(--s-ellipse);
 }
 
 .quick {
-  gap: var(--s-gap);
+  gap: var(--s-ellipse);
 }
 
 .spy-nav {
