--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
   --s-system: 1.4rem;
   --s-unit: 0.8rem;
   --s-safe: 1.2rem;
+  --s-screen: 3.4rem;
   --p-blur: blur(20px) saturate(180%);
   --p-shadow: drop-shadow(0px 0px 30px var(--c-dark));
 }
@@ -149,7 +150,7 @@ button:focus-visible {
 }
 
 .screen {
-  margin-top: 3.4rem;
+  margin-top: var(--s-screen);
 }
 
 .fixed-bottom {
@@ -238,8 +239,8 @@ button:focus-visible {
 }
 
 .backward {
-  height: 3.4rem;
-  width: 3.4rem;
+  height: var(--s-screen);
+  width: var(--s-screen);
   border-radius: 50%;
 }
 
