--- a/src/pages/Products/Products.css
+++ b/src/pages/Products/Products.css
@@ -1,6 +1,7 @@
 :root {
   --c-stock: #00e3961a;
   --c-subscription: #b25fea1a;
+  --s-entry: 4.2rem;
 }
 
 .widget-title {
@@ -9,12 +10,13 @@
 }
 
 .widget-main {
-  font-size: 3.2rem;
+  font-size: var(--s-entry);
   margin-bottom: 1.6rem;
 }
 
 .widget-group {
-  padding: 0.7rem 0.7rem 0.3rem;
+  width: var(--s-entry);
+  height: var(--s-entry);
   border-radius: 50%;
 }
 
@@ -64,6 +66,6 @@ small {
   }
 
   .widget-line circle {
-    stroke-width: var(--s-medium);
+    stroke-width: var(--s-dock);
   }
 }
