--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
   --s-unit: 0.8rem;
   --s-safe: 1.2rem;
   --s-screen: 3.4rem;
+  --s-entry: 4rem;
   --p-blur: blur(20px) saturate(180%);
   --p-shadow: drop-shadow(0px 0px 30px var(--c-dark));
 }
@@ -205,8 +206,7 @@ button:focus-visible {
 }
 
 .token,
-.btn,
-.backward {
+.btn {
   background-color: var(--c-active);
 }
 
@@ -238,13 +238,13 @@ button:focus-visible {
   transform: rotate(-45deg);
 }
 
-.backward {
-  height: var(--s-screen);
-  width: var(--s-screen);
+.shape {
+  height: var(--s-entry);
+  width: var(--s-entry);
   border-radius: 50%;
 }
 
-.backward:hover {
+.token:hover {
   background-color: var(--c-action);
 }
 
