Improve button alignment in firefox

--- a/src/pages/Products/Vault/Vault.css
+++ b/src/pages/Products/Vault/Vault.css
@@ -1,6 +1,10 @@
+:root {
+  --s-radio: 10rem;
+}
+
 .activity {
-  height: 10rem;
-  width: 10rem;
+  height: var(--s-radio);
+  width: var(--s-radio);
 }
 
 .ring {
