--- a/src/pages/Products/Products.css
+++ b/src/pages/Products/Products.css
@@ -3,6 +3,10 @@
   --c-subscription: #b25fea1a;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .widget-title {
   font-size: 1.7rem;
   margin-bottom: 0.2rem;
