--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -10,8 +10,8 @@
 
 .tour-list {
   font-size: var(--s-system);
-  align-items: flex-start;
   min-width: 18rem;
+  gap: 0.2rem;
 }
 
 .tour-list-item {
