--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -10,6 +10,6 @@
 
 @media screen and (max-width: 768px) {
   .home-stats {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: 1fr;
   }
 }
