--- a/src/pages/NewsFeed/NewsFeed.css
+++ b/src/pages/NewsFeed/NewsFeed.css
@@ -1,6 +1,7 @@
 table {
   border-collapse: collapse;
-  border-radius: var(--s-unit);
+  font-size: 1.6rem;
+  border: 1px solid var(--c-active);
 }
 
 th,
@@ -15,6 +16,10 @@ caption {
   border-radius: var(--s-unit) var(--s-unit) 0 0;
 }
 
-tr:nth-child(even) {
-  background-color: var(--c-active);
+tbody tr:nth-child(odd) {
+  background-color: var(--c-white);
+}
+
+tbody tr:nth-child(even) {
+  background-color: transparent;
 }
