Enhance color saturation

--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,9 @@
   --c-heat: #fa124f;
   --c-purple: #b25fea;
   --c-glass: #f2f2f7;
-  --c-ghost: #eefbf3;
-  --c-show: #fff4f4;
-  --c-alice: #f0fbff;
+  --c-ghost: #ebfff0;
+  --c-show: #fce8e6;
+  --c-alice: #e8f0fe;
   --s-ellipse: 4.4rem;
   --s-medium: 2rem;
   --s-dock: 2.4rem;
