Get color of material from stotybook

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   --c-grey: #a1a1a6;
   --c-heat: #fa124f;
   --c-purple: #b25fea;
-  --c-glass: #f2f2f7;
+  --c-glass: #f6f9fc;
   --c-ghost: #ebfff0;
   --c-show: #fce8e6;
   --c-alice: #e8f0fe;
