--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ body {
   background-color: var(--c-white);
   color: var(--c-black);
   min-height: 100vh;
+  padding-bottom: var(--s-unit);
 }
 
 a {
