--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -8,6 +8,21 @@
   color: var(--c-purple);
 }
 
+.os {
+  background-color: var(--c-white);
+  border-radius: 1rem;
+  padding: var(--s-system);
+}
+
+.os-title {
+  font-size: 1.6rem;
+  margin-bottom: var(--s-safe);
+}
+
+.os-value {
+  font-size: 2.8rem;
+}
+
 @media screen and (max-width: 768px) {
   .home-stats {
     grid-template-columns: 1fr;
