--- a/src/pages/Privacy/Privacy.css
+++ b/src/pages/Privacy/Privacy.css
@@ -5,6 +5,11 @@
   padding-top: var(--s-ellipse);
 }
 
+.paper {
+  background-color: var(--c-active);
+  text-transform: uppercase;
+}
+
 .quick {
   gap: var(--s-ellipse);
 }
