--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,9 +1,9 @@
-.badge {
-  padding: 1.2rem 0;
+.box-item {
+  padding: var(--s-safe) 0;
 }
 
 .box-description {
-  font-size: 1.6rem;
+  font-size: 1.7rem;
   text-transform: uppercase;
   margin-top: 0.4rem;
 }
