--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -60,3 +60,13 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+@media screen and (max-width: 480px) {
+  .os-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .os-column {
+    grid-column: span 1;
+  }
+}
